--- a/src/app/lateral-menu/lateral-menu.component.html
+++ b/src/app/lateral-menu/lateral-menu.component.html
@@ -1,1 +1,28 @@
-<p>lateral-menu works!</p>
+<div class="rectangle">
+  <div class="container">
+    <div class="planttitle">
+      <h2>SAPIN</h2>
+    </div>
+
+    <button class="arrowButton">
+      <img src="assets/icons/icons8-arrow-100.png" height="50" width="50" style="transform: rotate(180deg);">
+    </button>
+
+  </div>
+  <div class="content">
+    <div class="imgcontainer">
+      <img src="assets/icons/flower.jpeg">
+    </div>
+  </div>
+  <div class="comment">
+    <button class="famtext">
+      Famille
+    </button>
+
+    <div>
+      <p>Poste par lululazone il y a 4 heures</p>
+    </div>
+    <img src="assets/icons/noprofile.jpeg">
+
+  </div>
+</div>
