--- a/src/app/lateral-menu/lateral-menu.component.html
+++ b/src/app/lateral-menu/lateral-menu.component.html
@@ -25,4 +25,16 @@
     <img src="assets/icons/noprofile.jpeg">
 
   </div>
+  <div>
+    <span style="margin-left: 10%;">Taille : X, XX, XXX m</span>
+  </div>
+  <div>
+    <span style="margin-left: 10%;">Couleurs: </span>
+    <button class="colorbutton" style="background-color: green;"></button>
+    <button class="colorbutton" style="background-color: darkgreen;"></button>
+    <button class="colorbutton" style="background-color: saddlebrown;"></button>
+  </div>
+  <div>
+    <span style="margin-left: 10%;">Description</span>
+  </div>
 </div>
